--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-Hello World!
+<title>My Web-page</title>
+<body bgcolor="yellow">
+  
+I love wikiHow because
+<marquee>It's the best website in the world!</marquee>
 
-This is a new change
+  <img src="http://www.wikihow.com/skins/common/images/wikiHow_logo_5.gif"></body>
 
-Adding a third change
-
-Adding a change in a branch
