--- a/index.html
+++ b/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 
-<title>My Web-page</title>
+<title>Demo Terrible Website!</title>
 <body bgcolor="yellow">
   
-I love wikiHow because
 <marquee>It's the best website in the world!</marquee>
 
-  <img src="http://www.wikihow.com/skins/common/images/wikiHow_logo_5.gif"></body>
-
+  
