--- a/index.html
+++ b/index.html
@@ -6,81 +6,81 @@
 <marquee>It's the best website in the world!</marquee>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 1 Name <img src="http://images.indianexpress.com/2016/04/12592250_903691643076358_6115484917659803342_n820.jpg?w=820"> </a> 
+ <a href="linktoyourgithub.page	"> <h1>Student 1 Name</h1> <img src="http://images.indianexpress.com/2016/04/12592250_903691643076358_6115484917659803342_n820.jpg?w=820"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 2 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 2 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 3 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 3 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 4 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 4 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 5 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 5 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 6 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 6 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 7 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 7 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 8 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 8 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 9 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 9 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 10 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 10 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 11 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 11 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 12 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 12 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 13 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 13 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 14 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 14 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 15 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 15 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 16 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 16 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 17 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 17 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 18 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 18 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 19 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 19 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
- <a href="linktoyourgithub.page"> Student 20 Name <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
+ <a href="linktoyourgithub.page"> <h1>Student 20 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
