--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 
-<title>Demo Terrible Website!</title>
+<title>Montreal Git Training Website!</title>
 <body bgcolor=#BADA55>
   
 <marquee>It's the best website in the world!</marquee>
 
 <p>  
- <a href="linktoyourgithub.page	"> <h1>Student 1 Name</h1> <img src="http://images.indianexpress.com/2016/04/12592250_903691643076358_6115484917659803342_n820.jpg?w=820"> </a> 
+ <a href="http://linktoyourgithub.page	"> <h1>Student 1 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
 </p>
 
 <p>  
