--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Montreal Git Training Website!</title>
 <body bgcolor=#BADA55>
   
-<marquee>It's the best website in the world!</marquee>
+<marquee><h1>This is the best website in the world!</h1></marquee>
 
 <p>  
  <a href="http://linktoyourgithub.page	"> <h1>Student 1 Name</h1> <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Rotating_earth_%28large%29.gif"> </a> 
